<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_account"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/account"
            android:gravity="center"
            android:text="@string/account"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="H,16:9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_user_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_account">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="?android:windowBackground"
                    android:padding="2dp"
                    android:src="@drawable/ic_man_profile"
                    app:shapeAppearanceOverlay="@style/Circular"
                    app:strokeColor="@color/grey_300"
                    app:strokeWidth="2dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_pro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/rounded_rectangle_outline"
                    android:paddingStart="16dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="4dp"
                    android:text="@string/pro"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="2dp"
                    android:text="@string/username"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="2dp"
                    android:text="@string/username_gmail_com"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/text_level"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_promo_offer"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_user_detail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_sports_waving_24dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/text_offer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/tect_promo"
                    android:textAlignment="center"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_my_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_level_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/my_level"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_promo_offer" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_purchase_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/purchases_and_memberships"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_my_level" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_settings_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_purchase" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_forum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_forum_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forum"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_setting" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_rate_us"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_rate_us_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/rate_us"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_forum" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_time_watched"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_time_watched_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/time_watched"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_rate_us" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_your_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_data_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/your_data"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_time_watched" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_help_center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_help_outline_24dp"
            android:drawablePadding="16dp"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/help_center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:drawableTint="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_your_data" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_agreement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:paddingBottom="56dp"
            android:text="@string/text_agreement"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_help_center" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>